# open-source-ua

./: .env.example  .eslintrc.js  .gitignore  README.md  example.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test.py  tsconfig.json
articles/: articles-ideas.md
articles/30-days-of-coding/: 30-days-of-coding.md
articles/ai-told-me/: index.md
articles/bun-joins-anthropic/: index.md
articles/javascript30/: javascript30.md
articles/react-has-changed-your-hooks-should-too-uk/: index.md  index.translation.md
bot/: README.md  cli.ts  config.ts  index.ts
bot/bot/: bot.ts  index.ts
bot/constant/: tag.constant.ts
guides/: README.md  how-to-contribute-to-open-source.md  starlight-contribute.md
guides/lib/: clone.md  fork.md
learn/: basics.py  string.py
posts/: 01-post.md  01_post.md  03-post-with-button.md  issues-pool.md  plan-2026.md
posts/01-post/: 01-post.md  index.md
posts/02-starlight-contribute/: index.md
posts/03-ngx-color-picker-css-classes/: index.md
posts/03-ngx-color-picker-enhancements/: index.md
posts/04-electron-offline-docs/: index.md
posts/05-leaflet-method-tests/: index.md
posts/06-jscpd-gh-pages/: index.md
posts/07-translate-bash-handbook/: index.md
posts/08-ariakit-examples-and-docs/: index.md
posts/09-leaflet-tests/: index.md
posts/10-karakeep-improvements/: index.md
posts/10-karakeep-rule-conditions/: index.md
posts/11-apple-source-maps-leekage/: index.md
posts/12-leaflet-geoman-esc-key/: index.md
src/: bot.ts  cli.ts  config.ts  index.ts
src/bot/: bot.ts  (+1 more)
tests/: test_bot.py
(+48 files in other folders)
